--- a/css/style.css
+++ b/css/style.css
@@ -424,14 +424,14 @@ mark,
     }
 .navbar{
   background-color: #000;
-  margin-left: 40px;
-  margin-right: 10%;
+  margin-left: 10px;
+  margin-right: 5%;
 
 }
 .nav-link{
   color: white;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-   margin-right: 20px;
+   margin-right: 10px;
 }
 .nav-link:hover{
   color:#FFBD39;
@@ -443,7 +443,11 @@ mark,
   color:#FFBD39 ;
 
 }
-
+.newtitle{
+  color: white;
+  font-size: 18px;
+  opacity: 0.7;
+}
 /* testimonial..................................................... */
 .testimonials{
   padding: 40px 0;
@@ -477,6 +481,14 @@ mark,
   box-sizing: border-box;
   padding: 15px;
 }
+#col:hover{
+  transform: translateY(20px);
+
+  
+  
+
+}
+
 .testimonial{
   background:#191919;
   padding: 30px;
@@ -544,7 +556,6 @@ mark,
     width: 100%;
   }
   }
-
 .figure-img {
   margin-bottom: 0.5rem;
   line-height: 1; }
